# italbot

./: proxies  pyproject.toml
bot/: bot.py
